[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.94"

[lints.rust]
unsafe_code = "deny"
warnings = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
flate2 = "1.1.9"
thiserror = "1.0.38"                             # error handling
